deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: obligatorio-fe-devops
  labels:
    app: obligatoriofe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: obligatoriofe
  template:
    metadata:
      labels:
        app: obligatoriofe
    spec:
      containers:
        - name: ecr_demo_obli
          image: 206798921196.dkr.ecr.us-east-1.amazonaws.com/ecr_demo_obli:1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
