service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecr-demo-obli
spec:
  selector:
    app: ecr-demo-obli
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
