ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: titanic-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: obligatoriofe
            port:
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: obligatoriofe
            port:
              number: 8080
